--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,9 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "ConnectionStrings": {
+    "RedisConnection": "#{REDIS_CONNECTION}#",
+    "DefaultDatabase": "#{DATABASE_CONNECTION}#"
   },
-  "AllowedHosts": "*"
+  "Authentication": {
+    "CrmApiEndpoint": "#{CRM_ENDPOINT}#"
+  }
 }
